--- a/home/programs/shells/yazi/config/keymap.toml
+++ b/home/programs/shells/yazi/config/keymap.toml
@@ -141,10 +141,59 @@ on   = [ "c", "a" ]
 run  = "plugin compress"
 desc = "Archive selected files"
 
-# [[manager.prepend_keymap]]
-# on   = "R"
-# run  = "plugin rsync"
-# desc = "Copy files using rsync to default location"
+# sudo cp/mv
+[[manager.prepend_keymap]]
+on = ["R", "p", "p"]
+run = "plugin sudo -- paste"
+desc = "sudo paste"
+
+# sudo cp/mv --force
+[[manager.prepend_keymap]]
+on = ["R", "P"]
+run = "plugin sudo -- paste --force"
+desc = "sudo paste"
+
+# sudo mv
+[[manager.prepend_keymap]]
+on = ["R", "r"]
+run = "plugin sudo -- rename"
+desc = "sudo rename"
+
+# sudo ln -s (absolute-path)
+[[manager.prepend_keymap]]
+on = ["R", "p", "l"]
+run = "plugin sudo -- link"
+desc = "sudo link"
+
+# sudo ln -s (relative-path)
+[[manager.prepend_keymap]]
+on = ["R", "p", "r"]
+run = "plugin sudo -- link --relative"
+desc = "sudo link relative path"
+
+# sudo ln
+[[manager.prepend_keymap]]
+on = ["R", "p", "L"]
+run = "plugin sudo -- hardlink"
+desc = "sudo hardlink"
+
+# sudo touch/mkdir
+[[manager.prepend_keymap]]
+on = ["R", "a"]
+run = "plugin sudo -- create"
+desc = "sudo create"
+
+# sudo trash
+[[manager.prepend_keymap]]
+on = ["R", "d"]
+run = "plugin sudo -- remove"
+desc = "sudo trash"
+
+# sudo delete
+[[manager.prepend_keymap]]
+on = ["R", "D"]
+run = "plugin sudo -- remove --permanently"
+desc = "sudo delete"
 
 [[manager.prepend_keymap]]
 on   = [ "g", "i" ]
@@ -161,8 +210,11 @@ on   = [ "c", "s" ]
 run  = "plugin what-size"
 desc = "Calc size of selection or cwd"
 
-[manager]
+[[manager.prepend_keymap]]
+on  = "M"
+run = "plugin mount"
 
+[manager]
 keymap = [
     { on = [ "<Esc>" ], run = "escape",             desc = "Exit visual mode, clear selected, or cancel search" },
     { on = [ "<C-[>" ], run = "escape",             desc = "Exit visual mode, clear selected, or cancel search" },
