--- a/home/programs/shells/yazi/config/theme.toml
+++ b/home/programs/shells/yazi/config/theme.toml
@@ -2,7 +2,7 @@
 # If you encounter any issues, please make an issue at https://github.com/yazi-rs/schemas.
 "$schema" = "https://yazi-rs.github.io/schemas/theme.json"
 
-[manager]
+[mgr]
 cwd = { fg = "#94e2d5" }
 
 # Hovered
