update: this might resolve the ssh problem (?)

--- a/home/programs/shells/git_ssh/config
+++ b/home/programs/shells/git_ssh/config
@@ -1,6 +1,7 @@
 Host *
     ForwardAgent no
-    AddKeysToAgent no
+    AddKeysToAgent yes
+    IdentityFile ~/.ssh/blackwhite_yuki
     Compression no
     ServerAliveInterval 0
     ServerAliveCountMax 3
